Add edit to annotations (#1976)
* move fillNstroke to own component

* move fillNstroke to own component

* add a annotation-weight components

* The enigma: where the style go

* fix(annotation-edit): cloning 'style.initial' objects

* update activeChange inside context-menu.ts

* fix toggle and add type to annotation model

* update style for context menu

* fix review comments

* fixing ng lint error

* add type and style to test

* fixing testing

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -8,13 +8,44 @@
 	 (ansynClickOutside)="close()">
 
 	<div class="context-menu">
-		<div class="buttons">
-			<button [class.active]="clickMenuProps.showMeasures" (click)="toggleMeasures()"><i
-				class="icon-tools-ruler"></i></button>
-			<button [class.active]="clickMenuProps.showLabel" (click)="toggleLabel()"><i
-				class="icon-annotation-label"></i></button>
-			<button class='removeFeature' (click)="removeFeature()"><i class="icon-close"></i></button>
-		</div>
+		<ul class="buttons">
+			<li>
+				<button [class.active]="clickMenuProps.showMeasures" (click)="toggleMeasures()"><i
+					class="icon-tools-ruler"></i></button>
+			</li>
+			<li>
+				<button [class.active]="clickMenuProps.showLabel" (click)="toggleLabel()"><i
+					class="icon-annotation-label"></i>
+				</button>
+			</li>
+			<li class="expanded-selection line-width-selection">
+				<p>
+					<button [class.active]="clickMenuProps.showWeight" (click)="toggleWeight()"><i
+						class="icon-annotation-weight"></i></button>
+					<ansyn-annotations-weight
+						[show]="clickMenuProps.showWeight"
+						[properties]="clickMenuProps.style.initial"
+						(selectLineWidth)="selectLineWidth($event.width)">
+					</ansyn-annotations-weight>
+				</p>
+			</li>
+			<li>
+				<p>
+					<button [class.active]="clickMenuProps.showColorPicker" (click)="toggleColorPicker()">
+						<i class="icon-annotation-color"></i></button>
+					<ansyn-annotations-color
+						[show]="clickMenuProps.showColorPicker"
+						[properties]="clickMenuProps.style.initial"
+						(colorChange)="colorChange($event)"
+						(activeChange)="activeChange($event)"
+					></ansyn-annotations-color>
+				</p>
+			</li>
+
+			<li>
+				<button class='removeFeature' (click)="removeFeature()"><i class="icon-close"></i></button>
+			</li>
+		</ul>
 	</div>
 
 	<form class="annotation-label-edit" (ngSubmit)="updateLabel()" *ngIf="clickMenuProps.showLabel">
@@ -22,6 +53,7 @@
 			   name="EditLabel">
 		<i (click)="updateLabel()" class="icon-edit"></i>
 	</form>
+
 
 </div>
 
