Update upload form (#26)
* implement new upload form

* Uppercase sensor type

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1160,10 +1160,10 @@
   },
   "uploadsConfig": {
       "apiUrl": "http://tb-server.webiks.com/v1/api/ansyn/upload",
-      "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
-      "sensorNames": [],
+      "sensorTypes": [  "Drone Imagery (JPG)", "Drone Map (GeoTIFF)", "Satellite GeoTIFF" ],
+      "sensorNames": [ "Phantom 3", "Phantom 4", "Phantom 4 Advanced", "Phantom 4 Pro", "Mavic", "Mavic Pro", "Mavic 2", "Spark", "Inspire" ],
       "defaultSharing": "public",
-      "defaultSensorType": "UAV",
+      "defaultSensorType": "Drone imagery (JPG)",
       "rulesLink": "about:blank"
    }
 }
