feat: required validation for ansyn checkbox (#27)
* feat: required validation for ansyn checkbox

* update upload form

--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
@@ -88,7 +88,7 @@
 		</div>
 
 		<button ansynButton class="reset" type="button" [disabled]="disabledReset()" (click)="resetForm()" >Reset</button>
-		<button ansynButton type="submit" [disabled]="!f.valid || loading || !licence">Submit</button>
+		<button ansynButton type="submit" [disabled]="!f.valid || loading">Submit</button>
 
 		<span>valid {{f.valid}}</span>
 	</form>
