--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -460,12 +460,16 @@
       }
     },
     "FootprintPolylineVisualizer": {
+      "simplifyGeometries": "false",
       "colors": {
         "active": "#27b2cf",
         "inactive": "#d393e1",
         "display": "#9524ad",
         "favorite": "yellow"
       }
+    },
+    "FootprintHeatmapVisualizer": {
+      "simplifyGeometries": "false",
     },
     "exampleFootprintHeatmapVisualizer": {
       "initial": {
