fix reset form before request (#29)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1167,7 +1167,7 @@
       "sensorTypes": [  "Drone Imagery (JPG)", "Drone Map (GeoTIFF)", "Satellite GeoTIFF" ],
       "sensorNames": [ "Phantom 3", "Phantom 4", "Phantom 4 Advanced", "Phantom 4 Pro", "Mavic", "Mavic Pro", "Mavic 2", "Spark", "Inspire" ],
       "defaultSharing": "public",
-      "defaultSensorType": "Drone imagery (JPG)",
+      "defaultSensorType": "Drone Imagery (JPG)",
       "rulesLink": "about:blank"
    }
 }
