fix: update the sensor's type according to the new list

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -303,33 +303,21 @@
 				  "collapsed": true,
 				  "children": [
 				  	{
-					  "text": "UAV",
+					  "text": "Drone Imagery (JPG)",
 					  "value": {
-						"sensorType": "UAV"
+						"sensorType": "Drone Imagery (JPG)"
 					  }
 					},
 					{
-					  "text": "Satellite",
+					  "text": "Drone Map (GeoTIFF)",
 					  "value": {
-						"sensorType": "Satellite"
+						"sensorType": "Drone Map (GeoTIFF)"
 					  }
 					},
 					{
-					  "text": "Aircraft",
+					  "text": "Satellite GeoTIFF",
 					  "value": {
-						"sensorType": "Aircraft"
-					  }
-					},
-					{
-					  "text": "Baloon",
-					  "value": {
-						"sensorType": "Baloon"
-					  }
-					},
-					{
-					  "text": "Kite",
-					  "value": {
-						"sensorType": "Kite"
+						"sensorType": "Satellite GeoTIFF"
 					  }
 					},
 					{
