--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -460,12 +460,16 @@
       }
     },
     "FootprintPolylineVisualizer": {
+      "minSimplifyVertexCountLimit": 100,
       "colors": {
         "active": "#27b2cf",
         "inactive": "#d393e1",
         "display": "#9524ad",
         "favorite": "yellow"
       }
+    },
+    "FootprintHeatmapVisualizer": {
+      "minSimplifyVertexCountLimit": 100
     },
     "exampleFootprintHeatmapVisualizer": {
       "initial": {
@@ -1160,10 +1164,10 @@
   },
   "uploadsConfig": {
       "apiUrl": "http://tb-server.webiks.com/v1/api/ansyn/upload",
-      "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
-      "sensorNames": [],
+      "sensorTypes": [  "Drone Imagery (JPG)", "Drone Map (GeoTIFF)", "Satellite GeoTIFF" ],
+      "sensorNames": [ "Phantom 3", "Phantom 4", "Phantom 4 Advanced", "Phantom 4 Pro", "Mavic", "Mavic Pro", "Mavic 2", "Spark", "Inspire" ],
       "defaultSharing": "public",
-      "defaultSensorType": "UAV",
+      "defaultSensorType": "Drone Imagery (JPG)",
       "rulesLink": "about:blank"
    }
 }
