--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.html
@@ -1,1 +1,3 @@
-<span class="back" (click)="backToTable()"></span>
+<button class="back" (click)="backToTable()" tooltip-value="Back" tooltip-class="left">
+	<i class="fa fa-long-arrow-left"></i>
+</button>
