--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -30,11 +30,13 @@
 
 	<hr class="big-font margin">
 
-	<div class=" small-padding-left margin">Area of interest</div>
+	<div class="small-padding-left margin">Area of interest</div>
 
-	<div class=" small-padding-left margin">
+	<div class="small-padding-left margin flex-row">
 		<span>Pin Location</span>
-		<span class="pin" [class.done]="currentTaskRegion$ | async" (click)="startDrawMode()"></span>
+		<button type="button" class="pin" [class.done]="currentTaskRegion$ | async" (click)="startDrawMode()">
+			<i class="icon-edit"></i>
+		</button>
 	</div>
 
 	<div class="big-font wide-underline margin"></div>
