--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -424,6 +424,7 @@
     "needToUseLayerExtent": false
   },
   "menuConfig": {
+    "menuItems": {{ getv "/ansyn/menu/items" "null" }},
     "path": "assets/logo.svg",
     "color": "{{ getv "/ansyn/menu/color" "white" }}",
     "background": "{{ getv "/ansyn/menu/background" "red" }}",
