--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
@@ -19,6 +19,9 @@
 			width: auto;
 			min-width: 100%;
 			background: black;
+			visibility: hidden;
+			max-height: 90px;
+			overflow: auto;
 			&.show {
 				visibility: visible;
 			}
