fix: contextmenu tooltip

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -433,7 +433,7 @@
     	"active": {{ getv "/ansyn/menu/forkme" "true" }},
     	"image": "assets/icons/forkme.svg",
     	"title": "Fork me on github",
-		"href": "https://github.com/ansyn/ansyn"
+		"href": "{{ getv "/ansyn/menu/forkme/url" "https://github.com/ansyn/ansyn" }}"
     }
   },
   "loginConfig": {
