css fixes combobox

--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -10,7 +10,7 @@
 			[isActive]="dataInputFilterExpand"
 			[attr.tooltip-value]="toolTips.dataInputFilter"
 			tooltip-class="top">
-			{{ dataInputFiltersTitle }}
+			<span class="render">{{ dataInputFiltersTitle }}</span>
 		</button>
 
 		<ansyn-tree-view [@fade]
