--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -2,6 +2,10 @@
 @import "core/less/common";
 @import "core/less/tooltip";
 
+/deep/ .render {
+	display: flex;
+	align-items: center;
+}
 :host {
 	position: absolute;
 	z-index: @z-index-imagery-status;
