add upload progress for each file (#40)
* add upload progress for each file

* fix test and lint failure

* add new components

* move request to effect

* move request to effect

* move request to effect

* change upload system

--- a/src/app/@ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/assets/styles/styles.css
@@ -6,6 +6,8 @@
 @import "~primeng/resources/primeng.min.css";
 @import "~primeng/resources/themes/omega/theme.css";
 @import "~font-awesome/css/font-awesome.min.css";
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 
 circle.drop.selected {
 	fill: black;
