change file index:

--- a/src/app/@ansyn/core/forms/file-input/file-input.component.html
+++ b/src/app/@ansyn/core/forms/file-input/file-input.component.html
@@ -12,5 +12,5 @@
 </label>
 
 <span class="files">
-	{{ input.files.length > 1 ? input.files.length + ' files' : input.value}}
+	{{ input.files.length > 1 ? input.files.length + ' files' : input.files.item(0).name }}
 </span>
