--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -309,6 +309,12 @@
 					  }
 					},
 					{
+					  "text": "Mobile Imagery (JPG)",
+					  "value": {
+						"sensorType": "Mobile Imagery (JPG)"
+					  }
+					},
+					{
 					  "text": "Drone Map (GeoTIFF)",
 					  "value": {
 						"sensorType": "Drone Map (GeoTIFF)"
@@ -1153,9 +1159,9 @@
   },
   "uploadsConfig": {
       "apiUrl": "http://tb-server.webiks.com/v1/api/ansyn/upload",
-      "sensorTypes": [  "Drone Imagery (JPG)", "Drone Map (GeoTIFF)", "Satellite GeoTIFF" ],
+      "sensorTypes": [  "Drone Imagery (JPG)", "Mobile Imagery (JPG)", "Drone Map (GeoTIFF)", "Satellite GeoTIFF" ],
       "sensorNames": [ "Phantom 3", "Phantom 4", "Phantom 4 Advanced", "Phantom 4 Pro", "Mavic", "Mavic Pro", "Mavic 2", "Spark", "Inspire" ],
-      "defaultSharing": "public",
+      "defaultSharing": "Public",
       "defaultSensorType": "Drone Imagery (JPG)",
       "rulesLink": "about:blank"
    }
