cr request changes

--- a/src/app/@ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/assets/styles/styles.css
@@ -6,6 +6,7 @@
 @import "~primeng/resources/primeng.min.css";
 @import "~primeng/resources/themes/omega/theme.css";
 @import "~font-awesome/css/font-awesome.min.css";
+@import "~cesium/Build/Cesium/Widgets/widgets.css";
 
 circle.drop.selected {
 	fill: black;
