--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -12,7 +12,7 @@
 		*ngIf="false"
 		class="combo-box-width"
 		direction="bottom"
-		name="orientation"
+		name="mapSource"
 		[(ngModel)]="selectedMap">
 
 		<ansyn-combo-box-option value="openLayersMap">
