--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -9,10 +9,10 @@
 	</button>
 
 	<ansyn-combo-box
-		*ngIf="false"
 		class="combo-box-width"
 		direction="bottom"
 		name="mapSource"
+		(ngModelChange)="changeActiveMap(selectedMap)"
 		[(ngModel)]="selectedMap">
 
 		<ansyn-combo-box-option value="openLayersMap">
