--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -13,6 +13,7 @@
 		class="combo-box-width"
 		direction="bottom"
 		name="mapSource"
+		(ngModelChange)="changeActiveMap(selectedMap)"
 		[(ngModel)]="selectedMap">
 
 		<ansyn-combo-box-option value="openLayersMap">
