Enable upload click to move (#71)
* click to move

* favorite on click

* add test to upload list

* fix upload.component test

--- a/src/app/drone/uploads/components/upload-list/upload-list.component.html
+++ b/src/app/drone/uploads/components/upload-list/upload-list.component.html
@@ -10,6 +10,7 @@
 			<ansyn-upload-item
 				[name]="file.request.file.name"
 				[value]="file.percent"
+				(moveToUpload)="moveToUpload(file.response)"
 			></ansyn-upload-item>
 		</ng-container>
 	</div>
