--- a/src/app/drone/uploads/components/upload-list/upload-list.component.less
+++ b/src/app/drone/uploads/components/upload-list/upload-list.component.less
@@ -17,9 +17,7 @@ div.upload-list {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		margin: 5px;
-		paddign: 5px;
-
+		margin-bottom: 5px;
 	}
 
 	.list {
