fix change maps with one map layout

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -9,9 +9,8 @@
 	</button>
 
 	<ansyn-combo-box
-		*ngIf="false"
 		class="combo-box-width"
-		direction="bottom"
+		[direction]="mapsAmount > 1 ? 'bottom' : 'top'"
 		name="mapSource"
 		(ngModelChange)="changeActiveMap($event)"
 		[(ngModel)]="selectedMap">
