feat: imagery store

--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -14,7 +14,7 @@
 
 	<ansyn-imagery-rotation [mapState]="mapState"></ansyn-imagery-rotation>
 
-	<ansyn-imagery-view [mapComponentSettings]="mapState"></ansyn-imagery-view>
+	<ansyn-imagery-view [settings]="mapState"></ansyn-imagery-view>
 
 	<ansyn-annotations-context-menu [mapId]="mapState.id"></ansyn-annotations-context-menu>
 
