Disabled sensor name on 'mobile' state (#92)
* revert auto scroll

* fix: disabled sensor name

* fix: disabled sensor name

* test: add unit test

--- a/src/app/drone/uploads/components/uploads/uploads.component.html
+++ b/src/app/drone/uploads/components/uploads/uploads.component.html
@@ -26,7 +26,7 @@
 							 [value]="value"
 							 required
 							 [ngModel]="formData.sensorType"
-							 (ngModelChange)="uploadFormData({ sensorType: $event })">
+							 (ngModelChange)="uploadFormData({ sensorType: $event, sensorName: isMobile($event) ? '' : formData.sensorName })">
 					{{value}}
 				</ansyn-radio>
 			</div>
@@ -37,6 +37,7 @@
 				required
 				name="sensorName"
 				color="transparent"
+				[disabled]="isMobile(formData?.sensorType)"
 				placeholder="*Sensor name"
 				[ngModel]="formData.sensorName"
 				(ngModelChange)="uploadFormData({ sensorName: $event })">
