--- a/src/app/drone/uploads/components/uploads/uploads.component.less
+++ b/src/app/drone/uploads/components/uploads/uploads.component.less
@@ -50,5 +50,12 @@ ansyn-loader {
 		}
 
 	}
+
+	/deep/ .options-container {
+		visibility: hidden;
+		max-height: 120px;
+		overflow: auto;
+	}
+
 }
 
