--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
@@ -19,9 +19,7 @@
 			width: auto;
 			min-width: 100%;
 			background: black;
-			visibility: hidden;
-			max-height: 90px;
-			overflow: auto;
+			z-index: 1;
 			&.show {
 				visibility: visible;
 			}
