on display overlay on communicator

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -9,6 +9,7 @@
 	</button>
 
 	<ansyn-combo-box
+		*ngIf="false"
 		class="combo-box-width"
 		[direction]="mapsAmount > 1 ? 'bottom' : 'top'"
 		name="mapSource"
