--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -9,53 +9,53 @@
       "autoSave": false,
       "state": {
         "timeFilter": "Start - End",
-        "orientation": "Align North",
+        "orientation": "Imagery Perspective",
         "maps": {
           "layout": "layout1",
           "data": [
             {
               "data": {
                 "position": {
-                  "extentPolygon": {
-                    "type": "Polygon",
-                    "coordinates": [
-                      [
-                        [
-                          -117.94293165339445,
-                          33.82040324951603
-                        ],
-                        [
-                          -117.88739896579649,
-                          33.82040324951603
-                        ],
-                        [
-                          -117.88739896579649,
-                          33.80000526593916
-                        ],
-                        [
-                          -117.94293165339445,
-                          33.80000526593916
-                        ],
-                        [
-                          -117.94293165339445,
-                          33.82040324951603
-                        ]
-                      ]
-                    ]
-                  },
-                  "projectedState": {
-                    "center": [
-                      -13126256.030144267,
-                      4003347.018056854
-                    ],
-                    "projection": {
-                      "code": "EPSG:3857"
-                    },
-                    "resolution": 3.3780713146372543,
-                    "rotation": 0,
-                    "zoom": 15.5
-                  }
-                }
+				  "extentPolygon": {
+					"type": "Polygon",
+					"coordinates": [
+					  [
+						[
+						  30.228881835937493,
+						  33.79284377363183
+						],
+						[
+						  40.28137207031249,
+						  33.79284377363183
+						],
+						[
+						  40.28137207031249,
+						  29.93113480986871
+						],
+						[
+						  30.228881835937493,
+						  29.93113480986871
+						],
+						[
+						  30.228881835937493,
+						  33.79284377363183
+						]
+					  ]
+					]
+				  },
+				  "projectedState": {
+					"center": [
+					  3924635.821280659,
+					  3747762.3000904336
+					],
+					"projection": {
+					  "code": "EPSG:3857"
+					},
+					"resolution": 611.49622628141,
+					"rotation": 0,
+					"zoom": 8
+				  }
+				}
               },
               "flags": {},
               "worldView": {
@@ -74,16 +74,58 @@
         "removedOverlaysIds": [],
         "removedOverlaysVisibility": true,
         "region": {
-          "type": "Point",
-          "coordinates": [
-                -117.9189835710201,
-                33.812091224680195
-          ]
-        },
+		  "type": "Polygon",
+		  "coordinates": [
+			  [
+				  [
+					  35.040894,
+					  33.050112
+				  ],
+				  [
+					  35.738525,
+					  33.128351
+				  ],
+				  [
+					  34.969482,
+					  29.53045
+				  ],
+				  [
+					  34.222412,
+					  31.438037
+				  ],
+				  [
+					  35.040894,
+					  33.050112
+				  ]
+			  ]
+		  ]
+	  },
         "dataInputFilters": {
-          "filters": [],
-          "active": false
-        },
+		  "fullyChecked": false,
+		  "filters": [
+			{
+			  "sensorType": "Drone Imagery (JPG)",
+			  "providerName": "TB"
+			},
+			{
+			  "sensorType": "Mobile Imagery (JPG)",
+			  "providerName": "TB"
+			},
+			{
+			  "sensorType": "Drone Map (GeoTIFF)",
+			  "providerName": "TB"
+			},
+			{
+			  "sensorType": "Satellite GeoTIFF",
+			  "providerName": "TB"
+			},
+			{
+			  "sensorType": "others",
+			  "providerName": "TB"
+			}
+		  ],
+		  "active": true
+		},
         "time": null,
         "facets": {
           "showOnlyFavorites": false,
