(fix) some typing error fixes

--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
@@ -1,20 +1,20 @@
 <div
-	[attr.tooltip-value]="geoRegiteredProperties.tooltipNorth"
+	[attr.tooltip-value]="geoRegisteredProperties.tooltipNorth"
 	tooltip-class="left">
 	<div class="tooltip-container"
 		 [style.cursor]="isRotating ? '-webkit-grabbing' : '-webkit-grab'"
-		 [style.transform]="'rotate(' + this[geoRegiteredProperties.rotatePointer] + 'rad)'"
+		 [style.transform]="'rotate(' + this[geoRegisteredProperties.rotatePointer] + 'rad)'"
 		 (mousedown)="startRotating($event)">
-		<div class="north" [style.color]="geoRegiteredProperties.color"> {{ geoRegiteredProperties.letter }}</div>
+		<div class="north" [style.color]="geoRegisteredProperties.color"> {{ geoRegisteredProperties.letter }}</div>
 	</div>
 </div>
 
 <div class="img-container"
-	 [attr.tooltip-value]="geoRegiteredProperties.tooltip"
+	 [attr.tooltip-value]="geoRegisteredProperties.tooltip"
 	 tooltip-class="bottom left">
-	<img [src]="geoRegiteredProperties.compass"
+	<img [src]="geoRegisteredProperties.compass"
 		 (click)="toggleNorth()"
 		 (mousedown)="stopPropagation($event)"
-		 [style.transform]="'rotate(' + this[geoRegiteredProperties.rotatePointer] + 'rad)'"
+		 [style.transform]="'rotate(' + this[geoRegisteredProperties.rotatePointer] + 'rad)'"
 		 [style.cursor]="isRotating ? '' : 'pointer'"/>
 </div>
