--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -8,7 +8,7 @@
 		Back to base map
 	</button>
 
-	<ansyn-combo-box
+	<ansyn-combo-box *ngIf="false"
 		class="combo-box-width"
 		[direction]="mapsAmount > 1 ? 'bottom' : 'top'"
 		name="mapSource"
