change accept file by sensorType (#99)

--- a/src/app/drone/uploads/components/uploads/uploads.component.html
+++ b/src/app/drone/uploads/components/uploads/uploads.component.html
@@ -76,7 +76,7 @@
 			<ansyn-file-input
 				#inputFile
 				required
-				accept="image/jpeg"
+				[accept]="getAcceptFile()"
 				[multiple]="true"
 				name="files"
 				placeholder="*Choose file"
