add term and condition (#100)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1205,6 +1205,6 @@
       "sensorNames": [ "Phantom 3", "Phantom 4", "Phantom 4 Advanced", "Phantom 4 Pro", "Mavic", "Mavic Pro", "Mavic 2", "Spark", "Inspire" ],
       "defaultSharing": "Public",
       "defaultSensorType": "Drone Imagery (JPG)",
-      "rulesLink": "about:blank"
+      "rulesLink": "https://creativecommons.org/licenses/by/4.0/"
    }
 }
