API check: setMapPositionByRect works!

--- a/src/app/app/sendbox/sendbox/sendbox.component.html
+++ b/src/app/app/sendbox/sendbox/sendbox.component.html
@@ -1,1 +1,5 @@
-<button (click)="setPositionWithRadius()">Set Position w/radius</button>
+
+<button (click)="setPositionWithRadius()">Set Position by radius</button>
+
+<button (click)="setPosition()">Set Position by rect</button>
+
