--- a/src/app/app/sendbox/sendbox/sendbox.component.less
+++ b/src/app/app/sendbox/sendbox/sendbox.component.less
@@ -5,4 +5,10 @@
 	overflow: visible;
 	padding: 40px 10px;
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+
+	& > * {
+		margin-top: 10px;
+	}
 }
