--- a/src/app/app/sendbox/sendbox/sendbox.component.html
+++ b/src/app/app/sendbox/sendbox/sendbox.component.html
@@ -1,5 +1,7 @@
 
-<button (click)="setPositionWithRadius()">Set Position by radius</button>
+<button (click)="setPositionByRadius()">Set Position by radius</button>
 
-<button (click)="setPosition()">Set Position by rect</button>
+<button (click)="setPositionByRect()">Set Position by rect</button>
+
+<button (click)="setOverlayCriteria()">Set overlays criteria</button>
 
