Sandbox: display static image - works

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -5,3 +5,5 @@
 
 <button (click)="setOverlayCriteria()">Set overlays criteria</button>
 
+<button (click)="displayOverlay()">Display overlay - static image</button>
+
