Sandbox: set overlays

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -1,4 +1,6 @@
 
+<h1>Sandbox</h1>
+
 <button (click)="setPositionByRadius()">Set Position by radius</button>
 
 <button (click)="setPositionByRect()">Set Position by rect</button>
@@ -6,4 +8,6 @@
 <button (click)="setOverlayCriteria()">Set overlays criteria</button>
 
 <button (click)="displayOverlay()">Display overlay - static image</button>
+
+<button (click)="setOverlays()">Set overlays in timeline</button>
 
