Sandbox: set layout 2 maps

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -11,3 +11,5 @@
 
 <button (click)="setOverlays()">Set overlays in timeline</button>
 
+<button (click)="setLayout2maps()">Set layout 2 maps</button>
+
