--- a/src/app/app/sandbox/components/sandbox.component.less
+++ b/src/app/app/sandbox/components/sandbox.component.less
@@ -8,6 +8,12 @@
 	display: flex;
 	flex-direction: column;
 
+	h1 {
+		color: brown;
+		text-shadow: black;
+		font-style: italic;
+	}
+
 	& > * {
 		margin-top: 10px;
 	}
