add credit name to terms (#108)
* add credit name to terms

* cut name function on upload file service

* fix: CR req changes

* fix: tests

* fix: tests

* fix test protection

--- a/src/app/drone/uploads/components/upload-item/upload-item.component.html
+++ b/src/app/drone/uploads/components/upload-item/upload-item.component.html
@@ -1,7 +1,7 @@
 <div class="upload">
 	<p class='name' [class.finish]="value === 100">
 	<span [title]="name"
-		  (click)="moveToUpload.emit($event)">{{cutName(name)}}</span>
+		  (click)="moveToUpload.emit($event)">{{service.cutName(name)}}</span>
 	</p>
 	<p *ngIf="value > -1; else error" class="progress">
 		<mat-progress-bar mode="determinate" [value]="value">
