--- a/src/app/drone/uploads/components/uploads/uploads.component.html
+++ b/src/app/drone/uploads/components/uploads/uploads.component.html
@@ -93,7 +93,7 @@
 				(ngModelChange)="uploadFormData({ licence: $event })"
 			>
 				<span class="licence">
-					I agree to submit uploaded imagery with attribution as contributor to /"AnSyn Imagery Network/" under
+					I agree to submit uploaded imagery with attribution as <span [title]="formData.creditName">{{service.cutName(formData.creditName) }}</span> (contributor) to /AnSyn Imagery Network/ under
 					<a [href]="rulesLink" target="_blank">CC-BY 4.0</a>
 				license
 				</span>
