--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -7,9 +7,10 @@
 
 <button (click)="setOverlayCriteria()">Set overlays criteria</button>
 
-<button (click)="displayOverlay()">Display overlay - static image</button>
-
 <button (click)="setOverlays()">Set overlays in timeline</button>
+
+<button (click)="displayOverlay()">Display overlay - active map</button>
 
 <button (click)="setLayout2maps()">Set layout 2 maps</button>
 
+<button (click)="displayOverlaysOnTwoMaps()">Display overlays on two maps</button>
