add not geo registered do default view (#110)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -134,7 +134,7 @@
               "fieldName": "isGeoRegistered",
               "metadata": {
                 "displayTrue": true,
-                "displayFalse": false
+                "displayFalse": true
               },
               "type": "Boolean"
             }
